# pluginfer

./: .bandit  .gitignore  AUDIT.md  CONTRIBUTING.md  NOTICE  README.md  SECURITY.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  nightly.yml  release.yml  wan-proof.yml
docs/: RESPONSIBLE_DISCLOSURE.md  SECURITY.md  SETUP_GUIDES.md  SIGNING_SETUP.md  api-reference.md  architecture.md  index.md  quickstart.md
growth/: curl_demo.sh  landing.html  waitlist_capture.py
installer/: INSTALL.md  Pluginfer-Setup.bat  Pluginfer-Setup.sh  Pluginfer.bat  Pluginfer.command  Pluginfer.desktop  build_macos.sh  build_macos.spec  build_windows.bat  build_windows.spec  entitlements.plist
v2/: BUILD_EXECUTABLE.md  BUILD_INSTALLER.bat  INSTALL_STARTUP.bat  MESH_NETWORKING.md  QUICK_START.md  README.md  analyze_logs.py  build_linux.sh  build_release.bat  build_windows.bat  check_gpu.py  check_ports.bat  clean_rebuild.bat  cleanup_ports.bat  config.json  demo.py  host_guard.py  installer_gui.py  launcher.py  pluginfer.py  pluginfer_node.py  requirements-devserver.txt  requirements.txt  requirements_py311.txt  run_immortal.bat  run_scale_test.bat  run_stress_only.bat  setup.py  setup_dependencies.py  simple_test.py  smart_launcher.py  stress_test.py  test_imports.py  test_optimization.py
v2/ai/: __init__.py  conftest.py
v2/sdk/python/: README.md  pyproject.toml
v2/sdk/python/pluginfer/: __init__.py  _http.py  auth.py  client.py  exceptions.py  fine_tune.py  jobs.py  providers.py  types.py  wallet.py
(+573 files in other folders)
